<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:text="@string/mensaje_bienvenida"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/ivImagen"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="10"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/iconbooktook" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_identificador"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/login_ayuda_credenciales"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contrasena"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_inicio_sesion" />

    <Button
        android:id="@+id/btnRegistroUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_registrar_usuario" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnIrCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop='12dp'
        android:text="@string/btn_creditos" />

</LinearLayout>