<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_hint_nombre" />

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_apellidos"/>

            <EditText
                android:id="@+id/etUsuarioRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_usuario_registro"/>

            <EditText
                android:id="@+id/etContrasenaRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contrasena_registro"/>

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/etFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:hint="@string/fecha_nacimiento" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tematica_libros" />

            <CheckBox
                android:id="@+id/cbComedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comedia"/>
            <CheckBox
                android:id="@+id/cbTerror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terror" />

            <CheckBox
                android:id="@+id/cbRomance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Romance" />

            <CheckBox
                android:id="@+id/cbLGTBIQPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LGTBIQ+" />

            <CheckBox
                android:id="@+id/cbNovelaHistoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Novela histórica" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_registrar"
                android:layout_marginTop="16dp" />







        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>