<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:text="@string/mensaje_bienvenida"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/ivImagen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerInside"
        android:contentDescription="@string/app_name"/>
    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:hint="@string/hint_usuario"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnIrCredit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight='20'
        android:text="@string/btn_creditos" />

</LinearLayout>